# ova-server

./: .gitignore  Justfile  Makefile  Readme.md  cli.py  gunicorn.conf.py  pyproject.toml  server.py  setup.cfg
.github/workflows/: ci.yaml
api/: __init__.py  consts.py  errors.py  exceptions.py  health.py  utils.py
api/config/api/: config.py
api/config/detection/: yolov4.py
api/detection/: consts.py  routes.py  schemas.py  validators.py
api/inference/: __init__.py  base.py  tensorflow.py  tensorflow_lite.py
api/model/detection/: utils.py  yolov4.py
requirements/: common.in  common.txt  dev.in  dev.txt  tensorflow.in  tensorflow.txt  tensorflow_lite.in  tensorflow_lite.txt  test.in  test.txt
tests/integration/: conftest.py
tests/integration/detection/: test_detection.py
